<resources>
    <string name="app_name">Bola na TV</string>
    <string name="version">Versão</string>
    <string name="developer_email">bolanatv.appsuporte@gmail.com</string>
    <string name="developer_name">João Amaral Dias</string>
    <string-array name="developer_emails">
        <item>bolanatv.appsuporte@gmail.com</item>
    </string-array>

    <string name="logo">Logo</string>
    <string name="noConnection">Sem conexão</string>
    <string name="loading">Carregando…</string>

    <string name="nav_header_title">BOLA NA TV</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Configurar</string>
    <string name="menu_rate">Gostou da app?</string>
    <string name="menu_comment">Enviar feedback</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_privacy">Privacidade</string>

    <string name="PrivacyTitle"><u>Politica de Privacidade</u></string>
    <string name="privacy_policy">João Amaral Dias built the Bola na TV app as an Ad Supported app. This SERVICE is provided by João Amaral Dias at no cost and is intended for use as is.
        \n\nThis page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
        \n\nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
        \n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Bola na TV unless otherwise defined in this Privacy Policy.
                \n\n<b>Information Collection and Use</b>
        \n\nFor a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
        \n\nThe app does use third party services that may collect information used to identify you.
        \n\nLink to privacy policy of third party service providers used by the app
        \n\n<ul><li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li></ul>
                \n\n<b>Log Data</b>
        \n\nI want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
                \n\n<b>Cookies</b>
        \n\nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
        \n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
                \n\n<b>Service Providers</b>
        \n\nI may employ third-party companies and individuals due to the following reasons:
                \n\n<ul><li>To facilitate our Service;</li>
                \n\n<li>To provide the Service on our behalf;</li>
                \n\n<li>To perform Service-related services;</li>
                \n\n<li>To assist us in analyzing how our Service is used.</li></ul>
        \n\nI want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
                \n\n<b>Security</b>
        \n\nI value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
                \n\n<b>Links to Other Sites</b>
        \n\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
                \n\n<b>Children’s Privacy</b>
        \n\nThese Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
                \n\n<b>Changes to This Privacy Policy</b>
        \n\nI may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
                \n\n<b>Contact Us</b>
        \n\nIf you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at João Amaral Dias.
        \n\n\nThis privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator
    </string>
    <string name="competition">Competition</string>
    <string name="away_team">Away Team</string>
    <string name="home_team">Home Team</string>
    <string name="retry">Tentar novamente</string>
    <string name="timePlaceholder">00:00</string>
    <string name="bell_notification">Bell notification</string>
    <string name="live">Em\nDireto</string>
    <string name="channel">Channel</string>
    <string name="appVersionNumber">3.0.0</string>
    <string name="lastUpdate">Atualizado em</string>
    <string name="lastUpdateDate">Março 2025</string>
    <string name="app_description">Bola na TV é uma aplicação que lhe permite saber onde serão transmitidos todos os jogos de futebol na televisão portuguesa e em que horário. Oferece ainda a informação relativa a que competição está inserido cada jogo e também a possibilidade de criar alarmes para cada um dos jogos.</string>
    <string name="rateTheApp">Avalie a app</string>


</resources>
