<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--item android:title="Definições">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item-->

    <item android:title="Feedback">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_rate"
                android:title="@string/menu_rate"/>
            <item
                android:id="@+id/nav_comment"
                android:icon="@drawable/ic_menu_email"
                android:title="@string/menu_comment" />
        </menu>
    </item>

    <item android:title="Sobre">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_about"/>
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_menu_privacy"
                android:title="@string/menu_privacy" />
        </menu>
    </item>

</menu>
