<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:background="@color/colorSurface"
    android:elevation="8dp"
    app:cardCornerRadius="8dp"
    app:strokeWidth="0.1dp"
    app:strokeColor="@color/colorPrimaryVariant">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/bell_notification"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_notification"
            app:tint="@color/colorOnSurface"
            app:layout_constraintBottom_toTopOf="@+id/competitionTextView"
            app:layout_constraintEnd_toEndOf="@+id/separatorView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/liveTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/live"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/colorError"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/competitionTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/separatorView"
            android:layout_width="0.1dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginVertical="8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/competitionTextView"
            app:layout_constraintStart_toEndOf="@+id/liveTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeTeamTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/home_team"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toStartOf="@+id/channelTextView"
            app:layout_constraintStart_toEndOf="@+id/separatorView"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/awayTeamTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/away_team"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toTopOf="@+id/competitionTextView"
            app:layout_constraintEnd_toStartOf="@+id/channelTextView"
            app:layout_constraintStart_toEndOf="@+id/separatorView"
            app:layout_constraintTop_toBottomOf="@+id/homeTeamTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/channelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/channel"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBottom_toTopOf="@+id/competitionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/competitionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:background="@color/colorPrimaryVariant"
            android:gravity="center"
            android:text="@string/competition"
            android:textColor="@color/colorOnPrimary"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>