<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/lightGrey">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/channel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="Channel"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/awayTeam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/competition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/secondaryLightColor"
            android:padding="2sp"
            android:text="@string/competition"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/awayTeam" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/awayTeam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:text="@string/away_team"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/channel"
            app:layout_constraintStart_toEndOf="@+id/notification"
            app:layout_constraintTop_toBottomOf="@+id/homeTeam" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeTeam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="10dp"
            android:paddingBottom="3dp"
            android:text="@string/home_team"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/channel"
            app:layout_constraintStart_toEndOf="@+id/notification"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            app:layout_constraintBottom_toTopOf="@+id/competition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_notifications_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>